--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+secrets/
 
 # Go workspace file
 go.work
@@ -23,3 +24,7 @@ go.work.sum
 
 # env file
 .env
+
+todo.txt
+Makefile
+bin/
