--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,20 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    
+    services:
+      postgres:
+        image: postgres:15.8
+        env:
+          POSTGRES_USER: amirshox
+          POSTGRES_PASSWORD: aboba2298
+          POSTGRES_DB: twitterdb
+        ports:
+          - 5433:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
     - uses: actions/checkout@v4
@@ -19,9 +32,15 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
-      
+    
+    - name: Install golang-migrate
+      run: |
+      wget https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-amd64.tar.gz
+      tar -xzf migrate.linux-amd64.tar.gz
+      sudo mv ./migrate /usr/bin/migrate
+
     - name: Run migrations
-      run: make migrateup
+      run: migrate -path internal/storage/postgres/migration -database "postgresql://amirshox:aboba2298@localhost:5433/twitterdb?sslmode=disable" -verbose up
 
     - name: Test
-      run: make test
+      run: go test -v -cover ./...
