--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ POSTGRES_HOST=localhost
 POSTGRES_DATABASE=twitterdb
 
 # Server settings
-SERVER_ADDRESS=localhost:8088
+SERVER_ADDRESS=localhost:8080
 SERVER_TIMEOUT=4s
-SERVER_IDLE_TIMEOUT=60s
+SERVER_IDLE_TIMEOUT=300s
 
 # Logger settings
 
